# immich-photoframe

./: CMakeLists.txt  DisplayImage.cpp  DisplayImage.h  Dockerfile  ImmichClient.cpp  ImmichClient.h  README.md  config.json  docker-compose.yml  main.cpp
